--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -254,6 +254,10 @@
     <Compile Include="AgricultureContextMigrations\202210161300278_Agriculture_Depogghhfj.Designer.cs">
       <DependentUpon>202210161300278_Agriculture_Depogghhfj.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210161355007_Agriculture_AgroSalesProductffrryuj.cs" />
+    <Compile Include="AgricultureContextMigrations\202210161355007_Agriculture_AgroSalesProductffrryuj.Designer.cs">
+      <DependentUpon>202210161355007_Agriculture_AgroSalesProductffrryuj.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -416,6 +420,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210161300278_Agriculture_Depogghhfj.resx">
       <DependentUpon>202210161300278_Agriculture_Depogghhfj.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210161355007_Agriculture_AgroSalesProductffrryuj.resx">
+      <DependentUpon>202210161355007_Agriculture_AgroSalesProductffrryuj.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
