--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -278,6 +278,10 @@
     <Compile Include="AgricultureContextMigrations\202210180800491_Agriculture_AddUnitId.Designer.cs">
       <DependentUpon>202210180800491_Agriculture_AddUnitId.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210180813092_Agriculture_Depo2.cs" />
+    <Compile Include="AgricultureContextMigrations\202210180813092_Agriculture_Depo2.Designer.cs">
+      <DependentUpon>202210180813092_Agriculture_Depo2.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -466,6 +470,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210180800491_Agriculture_AddUnitId.resx">
       <DependentUpon>202210180800491_Agriculture_AddUnitId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210180813092_Agriculture_Depo2.resx">
+      <DependentUpon>202210180813092_Agriculture_Depo2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
