newRMstock and purchase

--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3167,6 +3167,7 @@
     <Content Include="Views\AgroConfiguration\CreateAgroSalesProduct.cshtml" />
     <Content Include="Views\AgroConfiguration\GetAgroUnitList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetAgroUnitPartial.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetPRawmaterialStockList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
