--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -282,6 +282,10 @@
     <Compile Include="AgricultureContextMigrations\202210180813092_Agriculture_Depo2.Designer.cs">
       <DependentUpon>202210180813092_Agriculture_Depo2.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210200417325_Agriculture_SalesProductUpdate.cs" />
+    <Compile Include="AgricultureContextMigrations\202210200417325_Agriculture_SalesProductUpdate.Designer.cs">
+      <DependentUpon>202210200417325_Agriculture_SalesProductUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -473,6 +477,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210180813092_Agriculture_Depo2.resx">
       <DependentUpon>202210180813092_Agriculture_Depo2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210200417325_Agriculture_SalesProductUpdate.resx">
+      <DependentUpon>202210200417325_Agriculture_SalesProductUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
