--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -3168,6 +3168,8 @@
     <Content Include="Views\AgroConfiguration\GetAgroUnitList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetAgroUnitPartial.cshtml" />
     <Content Include="Views\AgroConfiguration\GetPRawmaterialStockList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetRawMaterialStockpurchaseList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_RawmatiralPurchaseDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
