--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -290,6 +290,10 @@
     <Compile Include="AgricultureContextMigrations\202210220920524_Agriculture_Depo3.Designer.cs">
       <DependentUpon>202210220920524_Agriculture_Depo3.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210230504375_Agriculture_DivisionUserTableAdded.cs" />
+    <Compile Include="AgricultureContextMigrations\202210230504375_Agriculture_DivisionUserTableAdded.Designer.cs">
+      <DependentUpon>202210230504375_Agriculture_DivisionUserTableAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -491,6 +495,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210220920524_Agriculture_Depo3.resx">
       <DependentUpon>202210220920524_Agriculture_Depo3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210230504375_Agriculture_DivisionUserTableAdded.resx">
+      <DependentUpon>202210230504375_Agriculture_DivisionUserTableAdded.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
