--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -294,6 +294,10 @@
     <Compile Include="AgricultureContextMigrations\202210230504375_Agriculture_DivisionUserTableAdded.Designer.cs">
       <DependentUpon>202210230504375_Agriculture_DivisionUserTableAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210230534492_Agriculture_DivisionUserOrgAduserr.cs" />
+    <Compile Include="AgricultureContextMigrations\202210230534492_Agriculture_DivisionUserOrgAduserr.Designer.cs">
+      <DependentUpon>202210230534492_Agriculture_DivisionUserOrgAduserr.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -498,6 +502,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210230504375_Agriculture_DivisionUserTableAdded.resx">
       <DependentUpon>202210230504375_Agriculture_DivisionUserTableAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210230534492_Agriculture_DivisionUserOrgAduserr.resx">
+      <DependentUpon>202210230534492_Agriculture_DivisionUserOrgAduserr.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
