--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -298,6 +298,14 @@
     <Compile Include="AgricultureContextMigrations\202210230534492_Agriculture_DivisionUserOrgAduserr.Designer.cs">
       <DependentUpon>202210230534492_Agriculture_DivisionUserOrgAduserr.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202210230724199_MM.cs" />
+    <Compile Include="AgricultureContextMigrations\202210230724199_MM.Designer.cs">
+      <DependentUpon>202210230724199_MM.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgricultureContextMigrations\202210230734117_upstring.cs" />
+    <Compile Include="AgricultureContextMigrations\202210230734117_upstring.Designer.cs">
+      <DependentUpon>202210230734117_upstring.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -505,6 +513,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202210230534492_Agriculture_DivisionUserOrgAduserr.resx">
       <DependentUpon>202210230534492_Agriculture_DivisionUserOrgAduserr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210230724199_MM.resx">
+      <DependentUpon>202210230724199_MM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202210230734117_upstring.resx">
+      <DependentUpon>202210230734117_upstring.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
