--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -103,7 +103,9 @@
     <Compile Include="Agriculture\AgroProductSalesInfoBusiness.cs" />
     <Compile Include="Agriculture\AgroUnitInfoBusiness.cs" />
     <Compile Include="Agriculture\AreaSetupBusiness.cs" />
+    <Compile Include="Agriculture\AreaUserBusiness.cs" />
     <Compile Include="Agriculture\BankSetupBusiness.cs" />
+    <Compile Include="Agriculture\DistributionUserBusiness.cs" />
     <Compile Include="Agriculture\DivisionInfoBusiness.cs" />
     <Compile Include="Agriculture\DivisionUserBusiness.cs" />
     <Compile Include="Agriculture\FinishGoodProductBusiness.cs" />
@@ -116,6 +118,8 @@
     <Compile Include="Agriculture\Interface\IAgroProductSalesInfoBusiness.cs" />
     <Compile Include="Agriculture\Interface\IAgroUnitInfo.cs" />
     <Compile Include="Agriculture\Interface\IAreaSetupBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IAreaUserBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IDistributionUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\IDivisionInfo.cs" />
     <Compile Include="Agriculture\Interface\IDivisionUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\IFinishGoodProductionDetailsBusiness.cs" />
@@ -137,14 +141,18 @@
     <Compile Include="Agriculture\Interface\IRawMaterialStockInfo.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialTrack.cs" />
     <Compile Include="Agriculture\Interface\IRegionSetup.cs" />
+    <Compile Include="Agriculture\Interface\IRegionUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\ISalesPaymentRegister.cs" />
     <Compile Include="Agriculture\Interface\IStockiestInfo.cs" />
+    <Compile Include="Agriculture\Interface\IStockiestUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\ITerritorySetup.cs" />
+    <Compile Include="Agriculture\Interface\ITerritoryUserBusiness.cs" />
     <Compile Include="Agriculture\Interface\IUserAssignBussiness.cs" />
     <Compile Include="Agriculture\Interface\IUserInfo.cs" />
     <Compile Include="Agriculture\Interface\IZone.cs" />
     <Compile Include="Agriculture\Interface\IZoneDetail.cs" />
     <Compile Include="Agriculture\Interface\IZoneSetup.cs" />
+    <Compile Include="Agriculture\Interface\IZoneUserBusiness.cs" />
     <Compile Include="Agriculture\MeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialSupplier.cs" />
     <Compile Include="Agriculture\MRawMaterialIssueStockDetailsBusiness.cs" />
@@ -159,14 +167,18 @@
     <Compile Include="Agriculture\RawMaterialSupplierBusiness.cs" />
     <Compile Include="Agriculture\RawMaterialTrackBusiness.cs" />
     <Compile Include="Agriculture\RegionSetupBusiness.cs" />
+    <Compile Include="Agriculture\RegionUserBusiness.cs" />
     <Compile Include="Agriculture\SalesPaymentRegisterBusiness.cs" />
     <Compile Include="Agriculture\StockiestInfoBusiness.cs" />
+    <Compile Include="Agriculture\StockiestUserBusiness.cs" />
     <Compile Include="Agriculture\TerritorySetupBusiness.cs" />
+    <Compile Include="Agriculture\TerritoryUserBusiness.cs" />
     <Compile Include="Agriculture\UserAssignBussiness.cs" />
     <Compile Include="Agriculture\UserInfoBusiness.cs" />
     <Compile Include="Agriculture\ZoneBusiness.cs" />
     <Compile Include="Agriculture\ZoneDetailBusiness.cs" />
     <Compile Include="Agriculture\ZoneSetupBusiness.cs" />
+    <Compile Include="Agriculture\ZoneUserBusiness.cs" />
     <Compile Include="Common\Status.cs" />
     <Compile Include="Common\Utility.cs" />
     <Compile Include="ControlPanel\AppUserBusiness.cs" />
